--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "!",
-    "token": "NjQ1Mjk3ODY1MDgxNzQ5NTE0.XdGNtQ.iWXvIPnwvW8S6rRouy1H58B1ars"
+    "token": "NjQ1Mjk3ODY1MDgxNzQ5NTE0.XdPosw.pGZ7frERs9p6vH__OuZmbb4tk8Y"
 }
